basic nested form working

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,9 +5,7 @@
       <div class="brand"><%= image_tag("squawk_36_24.png") %></div>
       <ul class="nav">
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Businesses", root_path %></li>
-        <li><%= link_to "People", root_path %></li>
-        <li><%= link_to "Jobs", root_path %></li>
+        <li><%= link_to "RFQs", rfqs_path %></li>
       </ul>       
           <%= render 'shared/sign_in_form' %>  
         
