--- a/app/views/rfqs/_form.html.erb
+++ b/app/views/rfqs/_form.html.erb
@@ -1,8 +1,7 @@
-<%= form_for(@rfq) do |f| %>
+<%= form_for(@rfq) do |rfq_form| %>
   <% if @rfq.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@rfq.errors.count, "error") %> prohibited this rfq from being saved:</h2>
-
       <ul>
       <% @rfq.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -11,19 +10,42 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :status %><br />
-    <%= f.text_field :status %>
+  <div class="clearfix">
+    <%= rfq_form.label :status, :for => "xlInput" %>
+     <div class="input">
+      <%= rfq_form.text_field :status %>
+    </div>
+  </div> 
+
+  <div class="clearfix">
+    <%= rfq_form.label :notes, :for => "xlInput" %>
+     <div class="input">
+      <%= rfq_form.text_area :notes, :rows => '3', :class => 'xxlarge' %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :creator %><br />
-    <%= f.number_field :creator %>
+
+  <div class="clearfix">
+    <div class="row">
+      <div class="span16">
+        <div class="span1">Line #</div>
+        <div class="span2">Part #</div>
+        <div class="span2">NSN</div>
+        <div class="span6">Description</div>
+        <div class="span1">CC</div>
+        <div class="span1">Quantity</div>
+        <div class="span1">&nbsp</div>
+      </div>
+    </div> 
+    <%= rfq_form.fields_for :rfq_lines do |rfq_line_form| %>
+      <%= render "rfq_line_fields", :rlf => rfq_line_form %>
+    <% end %>
   </div>
-  <div class="field">
-    <%= f.label :notes %><br />
-    <%= f.text_area :notes %>
+
+
+  <div class="clearfix">
+    <div class="input">
+      <%= rfq_form.submit "Submit", :class =>"btn small primary" %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
 <% end %>
