--- a/app/views/rfqs/_form.html.erb
+++ b/app/views/rfqs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@rfq) do |rfq_form| %>
+<%= form_for(@rfq) do |f| %>
   <% if @rfq.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@rfq.errors.count, "error") %> prohibited this rfq from being saved:</h2>
@@ -11,16 +11,16 @@
   <% end %>
 
   <div class="clearfix">
-    <%= rfq_form.label :status, :for => "xlInput" %>
+    <%= f.label :status, :for => "xlInput" %>
      <div class="input">
-      <%= rfq_form.text_field :status %>
+      <%= f.text_field :status %>
     </div>
   </div> 
 
   <div class="clearfix">
-    <%= rfq_form.label :notes, :for => "xlInput" %>
+    <%= f.label :notes, :for => "xlInput" %>
      <div class="input">
-      <%= rfq_form.text_area :notes, :rows => '3', :class => 'xxlarge' %>
+      <%= f.text_area :notes, :rows => '3', :class => 'xxlarge' %>
     </div>
   </div>
 
@@ -36,15 +36,20 @@
         <div class="span1">&nbsp</div>
       </div>
     </div> 
-    <%= rfq_form.fields_for :rfq_lines do |rfq_line_form| %>
-      <%= render "rfq_line_fields", :rlf => rfq_line_form %>
+    <%= f.fields_for :rfq_lines do |rfq_line_form| %>
+      <%= render "rfq_line_fields", :f => rfq_line_form %>
     <% end %>
+    <div class="row">
+      <div class="span16">
+        <%= link_to_add_fields "Add RFQ Line", f, :rfq_lines %>
+      </div>
+    </div>
   </div>
 
 
   <div class="clearfix">
     <div class="input">
-      <%= rfq_form.submit "Submit", :class =>"btn small primary" %>
+      <%= f.submit "Submit", :class =>"btn small primary" %>
     </div>
   </div>
 
