--- a/app/views/rfqs/_rfq_line_fields.html.erb
+++ b/app/views/rfqs/_rfq_line_fields.html.erb
@@ -1,13 +1,14 @@
-<div class="row inline-inputs">
-  <div class="span16">
-    <div class="span1"><%= rlf.text_field :line_number, :class => 'tiny' %></div>
-    <div class="span2"><%= rlf.text_field :part_number, :class => 'small' %></div>
-    <div class="span2"><%= rlf.text_field :nsn, :class => 'small' %></div>
-    <div class="span6"><%= rlf.text_field :description, :class => 'xlarge' %></div>
-    <div class="span1"><%= rlf.number_field :quantity, :class => 'tiny' %></div>
-    <div class="span1"><%= rlf.text_field :condition_code, :class => 'tiny' %> </div>
-    <% unless rlf.object.new_record? %>
-      <div class="span1"><%= rlf.check_box :_destroy %></div>
-    <% end %>
+<div class="line_fields" name="line_fields">
+  <div class="row inline-inputs">
+    <div class="span16">
+      <div class="span1"><%= f.text_field :line_number, :class => 'tiny' %></div>
+      <div class="span2"><%= f.text_field :part_number, :class => 'small' %></div>
+      <div class="span2"><%= f.text_field :nsn, :class => 'small' %></div>
+      <div class="span6"><%= f.text_field :description, :class => 'xlarge' %></div>
+      <div class="span1"><%= f.number_field :quantity, :class => 'tiny' %></div>
+      <div class="span1"><%= f.text_field :condition_code, :class => 'tiny' %> </div>
+      <div><%= f.hidden_field :_destroy %></div>
+      <div class="span1"><%= link_to_remove_fields "remove", f %></div>
+    </div>
   </div>
 </div>
